tests/snapshots/codegen_snapshot_tests__rfc088_iterator_adapters.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn is_even(n: i64) -> bool {
    return incan_stdlib::num::py_mod_i64(n, 2) == 0;
}
fn double(n: i64) -> i64 {
    return n * 2;
}
fn add(acc: i64, n: i64) -> i64 {
    return acc + n;
}
#[derive(Debug, Clone, Copy)]
struct Money(pub i64);
impl incan_stdlib::reflection::HasTypeClassName for Money {
    fn __class_name__() -> &'static str {
        "Money"
    }
}
#[derive(Debug, Clone, Copy)]
struct PositiveInt(pub i64);
impl incan_stdlib::reflection::HasTypeClassName for PositiveInt {
    fn __class_name__() -> &'static str {
        "PositiveInt"
    }
}
impl PositiveInt {
    pub fn from_underlying(
        n: i64,
    ) -> Result<PositiveInt, incan_stdlib::validation::ValidationError> {
        if n <= 0 {
            return Err::<
                PositiveInt,
                incan_stdlib::validation::ValidationError,
            >(
                incan_stdlib::validation::ValidationError::new(
                    "positive int must be greater than zero".to_string(),
                ),
            );
        }
        return Ok::<
            PositiveInt,
            incan_stdlib::validation::ValidationError,
        >(PositiveInt(n));
    }
}
fn sum_money(items: Vec<Money>) -> Money {
    return {
        let mut __incan_iterator_sum = crate::__incan_std::derives::collection::ListIterator {
            items: (items),
            index: 0i64,
        };
        crate::__incan_std::derives::collection::Iterator::sum(&mut __incan_iterator_sum)
    };
}
fn sum_positive(items: Vec<PositiveInt>) -> PositiveInt {
    return {
        let mut __incan_iterator_sum = crate::__incan_std::derives::collection::ListIterator {
            items: (items),
            index: 0i64,
        };
        crate::__incan_std::derives::collection::Iterator::sum(&mut __incan_iterator_sum)
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let xs = vec![1, 2, 3, 4, 5];
    let moneys = vec![Money(1), Money(2)];
    let positives = vec![
        match PositiveInt::from_underlying(1) { Ok(__incan_newtype_value) =>
        __incan_newtype_value, Err(__incan_validation_error) =>
        incan_stdlib::validation::raise_validation_error("PositiveInt".to_string(),
        "from_underlying".to_string(), __incan_validation_error) }, match
        PositiveInt::from_underlying(2) { Ok(__incan_newtype_value) =>
        __incan_newtype_value, Err(__incan_validation_error) =>
        incan_stdlib::validation::raise_validation_error("PositiveInt".to_string(),
        "from_underlying".to_string(), __incan_validation_error) }
    ];
    let ys = {
        let mut __incan_iter = crate::__incan_std::derives::collection::TakeIterator {
            source: (crate::__incan_std::derives::collection::MapIterator {
                source: (crate::__incan_std::derives::collection::FilterIterator {
                    source: (crate::__incan_std::derives::collection::ListIterator {
                        items: (xs).clone(),
                        index: 0i64,
                    }),
                    f: is_even,
                }),
                f: double,
            }),
            remaining: 2i64,
            marker: None,
        };
        let mut __incan_items = Vec::new();
        loop {
            match crate::__incan_std::derives::collection::Iterator::__next__(
                &mut __incan_iter,
            ) {
                Some(__incan_item) => __incan_items.push(__incan_item),
                None => break __incan_items,
            }
        }
    };
    let batches = {
        let mut __incan_iter = crate::__incan_std::derives::collection::BatchIterator {
            source: (crate::__incan_std::derives::collection::ListIterator {
                items: (xs).clone(),
                index: 0i64,
            }),
            size: 2i64,
            marker: None,
        };
        let mut __incan_items = Vec::new();
        loop {
            match crate::__incan_std::derives::collection::Iterator::__next__(
                &mut __incan_iter,
            ) {
                Some(__incan_item) => __incan_items.push(__incan_item),
                None => break __incan_items,
            }
        }
    };
    let reduced = {
        let mut __incan_iter = crate::__incan_std::derives::collection::ListIterator {
            items: (xs).clone(),
            index: 0i64,
        };
        let mut __incan_acc = 0;
        loop {
            match crate::__incan_std::derives::collection::Iterator::__next__(
                &mut __incan_iter,
            ) {
                Some(__incan_item) => {
                    __incan_acc = (add)(__incan_acc, __incan_item);
                }
                None => break __incan_acc,
            }
        }
    };
    let folded = {
        let mut __incan_iter = crate::__incan_std::derives::collection::ListIterator {
            items: (xs).clone(),
            index: 0i64,
        };
        let mut __incan_acc = 0;
        loop {
            match crate::__incan_std::derives::collection::Iterator::__next__(
                &mut __incan_iter,
            ) {
                Some(__incan_item) => {
                    __incan_acc = (add)(__incan_acc, __incan_item);
                }
                None => break __incan_acc,
            }
        }
    };
    let total = {
        let mut __incan_iterator_sum = crate::__incan_std::derives::collection::ListIterator {
            items: (xs),
            index: 0i64,
        };
        crate::__incan_std::derives::collection::Iterator::sum(&mut __incan_iterator_sum)
    };
    let total_money = sum_money(moneys);
    let total_positive = sum_positive(positives);
    let _ = println!("{}", ::std::convert::identity(ys.len() as i64));
    let _ = println!("{}", ::std::convert::identity(batches.len() as i64));
    let _ = println!("{}", reduced);
    let _ = println!("{}", folded);
    let _ = println!("{}", total);
    let _ = println!("{}", total_money.0);
    let _ = println!("{}", total_positive.0);
}
fn main() {
    main();
}
impl crate::__incan_std::derives::collection::Sum<Money> for Money {
    fn sum<I: crate::__incan_std::derives::collection::Iterator<Money>>(
        mut items: I,
    ) -> Self {
        let mut total: i64 = 0i64;
        loop {
            match <I as crate::__incan_std::derives::collection::Iterator<
                Money,
            >>::__next__(&mut items) {
                Some(item) => total += item.0,
                None => break Money(total),
            }
        }
    }
}
impl crate::__incan_std::derives::collection::Sum<PositiveInt> for PositiveInt {
    fn sum<I: crate::__incan_std::derives::collection::Iterator<PositiveInt>>(
        mut items: I,
    ) -> Self {
        let mut total: i64 = 0i64;
        loop {
            match <I as crate::__incan_std::derives::collection::Iterator<
                PositiveInt,
            >>::__next__(&mut items) {
                Some(item) => total += item.0,
                None => {
                    break match PositiveInt::from_underlying(total) {
                        Ok(value) => value,
                        Err(_) => {
                            panic!(
                                "validated newtype construction failed: PositiveInt::from_underlying"
                            )
                        }
                    };
                }
            }
        }
    }
}
