tests/snapshots/codegen_snapshot_tests__rust_allow.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[allow(dead_code)]
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct AllowModel {
    value: i64,
}
impl incan_stdlib::reflection::HasClassName for AllowModel {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for AllowModel {
    fn __class_name__() -> &'static str {
        "AllowModel"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for AllowModel {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for AllowModel {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("value"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for AllowModel {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "value" => Some(format!("{}", self.value)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("value".to_string(), format!("{}", self.value))]
    }
}
impl AllowModel {
    #[allow(unused_variables)]
    pub fn model_method(&self, _: i64) -> i64 {
        return self.value;
    }
}
#[allow(non_camel_case_types)]
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct allow_class {
    value: i64,
}
impl incan_stdlib::reflection::HasClassName for allow_class {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for allow_class {
    fn __class_name__() -> &'static str {
        "allow_class"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for allow_class {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for allow_class {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for allow_class {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl allow_class {
    #[allow(non_snake_case)]
    pub fn MixedMethod(&self) -> i64 {
        return self.value;
    }
}
#[allow(clippy::large_enum_variant)]
#[derive(Debug, Clone, PartialEq)]
enum AllowEnum {
    Small,
    Large(String),
}
impl incan_stdlib::reflection::HasTypeClassName for AllowEnum {
    fn __class_name__() -> &'static str {
        "AllowEnum"
    }
}
#[allow(non_camel_case_types)]
#[derive(Debug, Clone, Copy)]
struct allow_newtype(pub i64);
impl incan_stdlib::reflection::HasTypeClassName for allow_newtype {
    fn __class_name__() -> &'static str {
        "allow_newtype"
    }
}
impl allow_newtype {
    #[allow(dead_code)]
    pub fn inner(&self) -> i64 {
        return self.0;
    }
}
#[allow(non_snake_case, clippy::too_many_arguments)]
fn MixedName(a: i64, b: i64, c: i64) -> i64 {
    return a + b + c;
}
