tests/snapshots/codegen_snapshot_tests__rust_extern_delegation.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4495
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn fail_t(msg: String) {
    incan_stdlib::testing::fail_t(msg)
}
fn assert_true(value: bool) {
    if !value {
        let _ = fail_t("assertion failed: expected true".to_string());
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = assert_true(true);
}
fn main() {
    main();
}
