tests/snapshots/codegen_snapshot_tests__rust_interop_associated_functions.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4043
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::uuid::Uuid;
use ::std::collections::HashMap;
use ::std::time::Instant;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _id = Uuid::new_v4().to_string();
    let __m = HashMap::new();
    let __typed = HashMap::<String, i64>::new();
    let __start = Instant::now();
    let _ = println!("{}", _id);
}
fn main() {
    main();
}
