tests/snapshots/codegen_snapshot_tests__std_math.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 2344
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::math;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let constants = math::PI + math::E + math::TAU + math::INFINITY + math::NAN;
    let funcs = crate::__incan_std::math::round(1.4)
        + crate::__incan_std::math::log2(8.0) + crate::__incan_std::math::atan2(1.0, 1.0)
        + crate::__incan_std::math::hypot(3.0, 4.0);
    let ints = crate::__incan_std::math::gcd(54, 24)
        + crate::__incan_std::math::lcm(6, 8);
    let _ = println!("{}", constants + funcs + (ints) as f64);
}
fn main() {
    main();
}
